remove top header

--- a/index.html
+++ b/index.html
@@ -101,20 +101,20 @@
     <div class="wrapper">
 
       <!-- Main Header -->
-      <header class="main-header" id="home">
-        <div class="content-table header-content-fixed ">
-          <!-- <div class="whoim">
+      <header class="main-header no-window no-header-content" id="home">
+        <!-- <div class="content-table header-content-fixed ">
+          <div class="whoim">
             <div class="color-dark text-bold">
               Hello
             </div>
-          </div> -->
+          </div>
           <div class="v-content">
             <div class="container">
               <h1 class=" color-dark name">I’m Victor Chen</h1>
               <h4  class=" color-dark font-alt job"><span id="typed" class="typed"></span></h4>
             </div>
           </div>
-        </div>
+        </div> -->
 
 
         <!-- Main navbar -->
