clean up the home page

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <p><span>Feel free to reach out to me, I'm happy to chat with you!</span></p>
 
                 <!-- <button type="button" class="btn primary-btn btn-flat-solid">View Case Study</button> -->
-                <a href="https://drive.google.com/file/d/1ajoTFhWqE8AbmEjisL3Iurp1pdLZ_-n3/view?usp=sharing" class="btn btn-block btn-primary btn-flat-solid btn-lg btn-pill btn-sm margin-top-25"><i class="fa fa-briefcase"></i> View a design case study </a>
+                <a target="_blank" href="https://drive.google.com/file/d/1Bz-e8cFFridXrDcji8XhymebFwd_yoCH/view?usp=sharing" class="btn btn-block btn-primary btn-flat-solid btn-lg btn-pill btn-sm margin-top-25"><i class="fa fa-briefcase"></i> Download Resume </a>
                 
               </div>
             </div>
@@ -413,7 +413,7 @@
           <div class="container">
             <div class="padding30 text-center">
               <!-- <a href="https://drive.google.com/file/d/1Bz-e8cFFridXrDcji8XhymebFwd_yoCH/view?usp=sharing" class="btn btn-flat-line btn-default btn-download-resume"><i class="fa fa-download"></i>  Download Resume</a> -->
-              <a href="https://drive.google.com/file/d/1Bz-e8cFFridXrDcji8XhymebFwd_yoCH/view?usp=sharing" class="btn btn-primary btn-flat-solid btn-pill"><i class="fa fa-briefcase"></i> Download Resume</a>
+              <a href="https://drive.google.com/file/d/1Bz-e8cFFridXrDcji8XhymebFwd_yoCH/view?usp=sharing" class="btn btn-primary btn-flat-solid btn-pill" target="_blank"><i class="fa fa-briefcase"></i> Download Resume</a>
               <!-- <span class="space-inline-15 hidden-xs"></span>
               <a href="#" class="btn btn-flat-line btn-default light-font"><i class="fa fa-print"></i> Print CV</a> -->
             </div>
@@ -421,8 +421,7 @@
         </div><!-- END DOWNLOAD & PRVIEW BTN -->
 
         <!--SKILLS-->
-        <div class="container-medium">
-          <!-- Designer SKILS -->
+        <!-- <div class="container-medium">
           <div class="title-border">
             <h5 class=" color-dark no-margin text-bold ">Designer Skills</h5>
           </div>  
@@ -472,14 +471,15 @@
                 </li>
               </ul>
             </div>
-          </div>
+          </div> -->
           <!-- END MORE SKILS -->
 
-          <div class="title-border">
+          <!--SKIL CHART TOP-->
+          <!-- <div class="title-border">
             <h5 class=" color-dark no-margin text-bold ">Engineer Skills</h5>
           </div>  
 
-          <!--SKIL CHART TOP-->
+          
           <ul class="skill top list-unstyled clearfix">
             <li class="col-sm-3 col-xs-6 no-padding">
               <div class="box br-right br-bottom">
@@ -513,10 +513,11 @@
                 <div class="text-uppercase color-dark">HTML/CSS/JS</div>
               </div>
             </li>
-          </ul><!--END SKIL CHART TOP-->
+          </ul> -->
+          <!--END SKIL CHART TOP-->
 
           <!--SKIL CHART BOTTOM-->
-          <ul class="skill bottom list-unstyled clearfix">
+          <!-- <ul class="skill bottom list-unstyled clearfix">
             <li class="col-sm-3 col-xs-6 no-padding">
               <div class="box br-right">
                 <span class="chart" data-percent="82">
@@ -549,11 +550,12 @@
                 <div class="text-uppercase color-dark">Node JS</div>
               </div>
             </li>
-          </ul><!--END SKIL CHART BOTTOM-->
+          </ul> -->
+          <!--END SKIL CHART BOTTOM-->
 
 
 
-          <div class="white-space-50"></div>
+          <!-- <div class="white-space-50"></div> -->
         </div>
 
       </section><!-- END SERVICES-->
@@ -590,7 +592,7 @@
       <footer class="main-footer">
         <div class="container">
           <div class="folow-me">
-            Follow Me On
+            Connect With Me
           </div>
           <ul class="list-inline social-links text-center">
             <!-- <li>
