--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
               <div class="inner-text">
                 <h3 class="color-dark no-margin-top">Hello There!</h3>
 
-                <p><span>I have 6+ years of work experience in&nbsp;</span><strong>User experience design</strong><span>&nbsp;and 8+ years of work experience in&nbsp;</span><strong>Software engineering</strong><span>&nbsp;(Android, React, NodeJs, etc) for multiple different companies from different industries.</span></p>
+                <p><span>I have 7 years of work experience in&nbsp;</span><strong>User experience design</strong><span>&nbsp;and 8 years of work experience in&nbsp;</span><strong>Software engineering</strong><span>&nbsp;(Android, React, NodeJs, etc) for multiple different companies from different industries.</span></p>
                 
                 <p><span>I'm an advocate of&nbsp;</span><strong>User Center Design</strong><span >. My design process includes end-to-end product design activities. I will conduct&nbsp;</span><strong>user interviews</strong><span>&nbsp;and&nbsp;</span><strong>shadow the user</strong><span>&nbsp;to emphasize the users' pain points. I will create&nbsp;</span><strong>personas and journey maps</strong><span>&nbsp;to identify the top problem statement the team should focus on. I will host&nbsp;</span><strong>ideation sessions</strong><span>&nbsp;to explore all possible ideas with the whole product and engineering team. I will create&nbsp;</span><strong>LoFi or HiFi prototype</strong><span>&nbsp;based on the converged ideas to get alignment with the team. And I will conduct&nbsp;</span><strong>usability testings or run A/B testing</strong><span>&nbsp;with the real user to validate the designs or hypotheses we had.</span></p>
                 
