--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                 <p><span>Feel free to reach out to me, I'm happy to chat with you!</span></p>
 
                 <!-- <button type="button" class="btn primary-btn btn-flat-solid">View Case Study</button> -->
-                <a target="_blank" href="https://drive.google.com/file/d/1Bz-e8cFFridXrDcji8XhymebFwd_yoCH/view?usp=sharing" class="btn btn-block btn-primary btn-flat-solid btn-lg btn-pill btn-sm margin-top-25"><i class="fa fa-briefcase"></i> Download Resume </a>
+                <a target="_blank" href="https://drive.google.com/file/d/1Bz-e8cFFridXrDcji8XhymebFwd_yoCH/view?usp=sharing" class="btn btn-block btn-primary btn-flat-solid btn-lg btn-pill btn-sm margin-top-25"><i class="fa fa-briefcase"></i> View Resume </a>
                 
               </div>
             </div>
