--- a/index.html
+++ b/index.html
@@ -620,13 +620,14 @@
     </div><!--End wrapper page-->
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-81886809-3"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6BGT5C8EXY"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'UA-81886809-3');
+      gtag('config', 'G-6BGT5C8EXY');
     </script>
 
 
