--- a/index.html
+++ b/index.html
@@ -396,6 +396,97 @@
       </section> -->
       <!--END DESIGN PROCESS-->
 
+      <!-- Blog -->
+      <section id="blog" class="block-section">
+        <!-- TITLE PAGE -->
+        <div class=" shape-bottom">
+          <div class="bg-secondary block-title">
+            <div class="container">
+              <h2 class="text-uppercase color-dark text-bold no-margin">Blog Post</h2>
+              <div class="title-icon"> <i class="fa fa-inbox"></i> </div>
+            </div>
+          </div>
+        </div><!-- END TITLE PAGE -->
+
+
+        <div class="block-page" >
+          <div class="container-medium">
+            <!-- LIST BLOG-->
+            <ul class="list-unstyled list-blog">
+              <!-- Image Left Blog-->
+              <li>
+                <div class="clearfix box-blog">
+                    <div class="blog-bg" data-holdbg="https://miro.medium.com/v2/resize:fit:4800/format:webp/1*bB9XfsJgNZDzC-xKFo6TDQ.png" >&nbsp;
+                  </div>
+                  <div class="blog-content">
+                    <h5 class="text-uppercase color-dark text-bold">Storytelling Product Vision</h5>
+                    <div class="post-meta font-alt">
+                      <span><i class="fa fa-calendar"></i> 10th May 2023</span>
+                      <span><i class="fa fa-link"></i>Medium</span>
+                      <span><i class="fa fa-folder-o"></i>Vision & Strategy</span>
+                    </div>
+                    <p>It’s not easy to communicate your product vision with your team and leadership, and it’s even harder to get the team aligned on the vision and hope they can refer to it while making product decisions. In this article, I will share how I use storytelling to communicate product vision, keeping the team aligned and focused.</p>
+                    <a href="https://medium.com/building-freshbooks/use-the-vision-storyboard-to-keep-the-product-team-aligned-and-focused-part-1-bc094de38ba1" class="btn btn-xs btn-flat-solid primary-btn">Read More</a>
+                  </div>
+                </div>
+              </li>
+              <!-- Image Right Blog-->
+              <li>
+                <div class="clearfix box-blog">
+                  <div class="blog-bg" data-holdbg="https://miro.medium.com/v2/resize:fit:640/0*xntjmtXiRftdvoYR" >&nbsp;
+                  </div>
+                  <div class="blog-content">
+                    <h5 class="text-uppercase color-dark text-bold">The UX of water faucets</h5>
+                    <div class="post-meta font-alt">
+                      <span><i class="fa fa-calendar"></i> 7th Aug 2022</span>
+                      <span><i class="fa fa-link"></i>Medium</span>
+                      <span><i class="fa fa-folder-o"></i>UX Principle</span>
+                    </div>
+                    <p>As a former engineer turned Product Designer, I want to emphasize that we shouldn’t leave a system’s complexity to the end-user. The whole product team, including engineers, product designers and product managers, should work together to hide the system’s complexity and make the product easier to use for the end-user.</p>
+                    <a href="https://medium.com/building-freshbooks/water-faucets-in-the-uk-hide-system-complexity-from-the-user-89656a68c02d" class="btn btn-xs btn-flat-solid primary-btn">Read More</a>
+                  </div>
+                </div>
+              </li>
+              <!-- <li>
+                <div class="clearfix box-blog">
+                  <div class="blog-bg" data-holdbg="assets/theme/images/blog/3.jpg">&nbsp;
+                    <div  class="blog-ic"><i class="fa fa-picture-o"></i></div>
+                  </div>
+                  <div class="blog-content">
+                    <h5 class="text-uppercase color-dark text-bold">产品设计的内功与底层逻辑</h5>
+                    <div class="post-meta font-alt">
+                      <span><i class="fa fa-calendar"></i> 19th May 2014</span>
+                      <span><i class="fa fa-user"></i> Jack</span>
+                      <span><i class="fa fa-folder-o"></i> News</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <a href="blog-detail.html" class="btn btn-xs btn-flat-solid primary-btn">Read More</a>
+                  </div>
+                </div>
+              </li> -->
+              <!-- <li>
+                <div class="clearfix box-blog">
+                  <div class="blog-bg" data-holdbg="assets/theme/images/blog/4.jpg" >&nbsp;
+                    <div  class="blog-ic"><i class="fa fa-camera-retro"></i></div>
+                  </div>
+                  <div class="blog-content">
+                    <h5 class="text-uppercase color-dark text-bold">Title BLog Goes Here.</h5>
+                    <div class="post-meta font-alt">
+                      <span><i class="fa fa-calendar"></i> 19th May 2014</span>
+                      <span><i class="fa fa-user"></i> Jack</span>
+                      <span><i class="fa fa-folder-o"></i> News</span>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <a href="blog-detail.html" class="btn btn-xs btn-flat-solid primary-btn">Read More</a>
+                  </div>
+                </div>
+              </li> -->
+            </ul><!-- END LIST BLOG--> 
+          </div>
+        </div>
+      </section>
+      <!-- END Blog -->
+
       <!-- RESUME -->
       <section id="resume" class="block-section">
         
