update freshbooks project

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                     <div class="work-preview">
                       <img src="assets/theme/images/portfolio/freshbooks_promo.png" alt="">
                       <div class="hover">
-                        <a href="https://drive.google.com/file/d/1ajoTFhWqE8AbmEjisL3Iurp1pdLZ_-n3/view" class="project-title" target="_blank">FreshBooks App Store</a>
+                        <a href="https://drive.google.com/file/d/1-n4OByCOzcSYtilgDZV6UPS3DB-r4Eui/view?usp=sharing" class="project-title" target="_blank">FreshBooks App Store</a>
                       </div>
                     </div>
                   </div>
