add new blog post

--- a/index.html
+++ b/index.html
@@ -413,11 +413,32 @@
           <div class="container-medium">
             <!-- LIST BLOG-->
             <ul class="list-unstyled list-blog">
+              <!-- Image Right Blog-->
+              <li>
+                <div class="clearfix box-blog">
+                  <a href="https://medium.com/building-freshbooks/continuous-interview-how-we-do-it-at-freshbooks-bd3eee6bf4">
+                    <div class="blog-bg" data-holdbg="https://miro.medium.com/v2/resize:fit:640/format:webp/0*YK9p6DjxgzerAZhi.png" >&nbsp;
+                    </div>
+                  </a>
+                  <div class="blog-content">
+                    <h5 class="text-uppercase color-dark text-bold">Continuous Interview</h5>
+                    <div class="post-meta font-alt">
+                      <span><i class="fa fa-calendar"></i> 10th Dec 2023</span>
+                      <span><i class="fa fa-link"></i>Medium</span>
+                      <span><i class="fa fa-folder-o"></i>User Research</span>
+                    </div>
+                    <p>Read on if you’re interested in waking up every Monday morning with a handful of interview sessions automagically booked in your calendar, with only one hour of setup work per month.</p>
+                    <a href="https://medium.com/building-freshbooks/continuous-interview-how-we-do-it-at-freshbooks-bd3eee6bf4" class="btn btn-xs btn-flat-solid primary-btn">Read More</a>
+                  </div>
+                </div>
+              </li>
               <!-- Image Left Blog-->
               <li>
                 <div class="clearfix box-blog">
+                  <a href="https://medium.com/building-freshbooks/use-the-vision-storyboard-to-keep-the-product-team-aligned-and-focused-part-1-bc094de38ba1">
                     <div class="blog-bg" data-holdbg="https://miro.medium.com/v2/resize:fit:4800/format:webp/1*bB9XfsJgNZDzC-xKFo6TDQ.png" >&nbsp;
-                  </div>
+                    </div>
+                  </a>
                   <div class="blog-content">
                     <h5 class="text-uppercase color-dark text-bold">Storytelling Product Vision</h5>
                     <div class="post-meta font-alt">
@@ -433,8 +454,10 @@
               <!-- Image Right Blog-->
               <li>
                 <div class="clearfix box-blog">
-                  <div class="blog-bg" data-holdbg="https://miro.medium.com/v2/resize:fit:640/0*xntjmtXiRftdvoYR" >&nbsp;
-                  </div>
+                  <a href="https://medium.com/building-freshbooks/water-faucets-in-the-uk-hide-system-complexity-from-the-user-89656a68c02d">
+                    <div class="blog-bg" data-holdbg="https://miro.medium.com/v2/resize:fit:640/0*xntjmtXiRftdvoYR" >&nbsp;
+                    </div>
+                  </a>
                   <div class="blog-content">
                     <h5 class="text-uppercase color-dark text-bold">The UX of water faucets</h5>
                     <div class="post-meta font-alt">
